Writing code to update and delete newsletters with the Swagger API
